--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="my_primary">#C08DFF</color>
+    <color name="my_secondary">#6B0CF3</color>
+    <color name="my_statusbar">#A8A1B8</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_text">#ED0A0A</color>
 </resources>
