--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="my_primary">#C08DFF</color>
-    <color name="my_secondary">#6B0CF3</color>
-    <color name="my_statusbar">#A8A1B8</color>
+    <color name="my_secondary">#225985</color>
+    <color name="my_statusbar">#431595</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
