--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -13,7 +13,7 @@
         android:layout_height="75dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="11dp"
-        android:text="textview"
+        android:text="@string/textview"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -29,7 +29,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="Enter Phone Number"
+        android:hint="@string/enter_phone_number"
         android:inputType="phone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="96dp"
-        android:text="CALL NUMBER"
+        android:text="@string/call_number"
         android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/editTextPhone"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="44dp"
-        android:text="CHANGE PICTURE"
+        android:text="@string/change_picture"
         android:textColor="#0B0B0B"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
