--- a/app/src/main/res/layout/sent_message.xml
+++ b/app/src/main/res/layout/sent_message.xml
@@ -33,5 +33,5 @@
         android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sender" />
+        app:srcCompat="@drawable/sender1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
