--- a/app/src/main/res/layout/sent_message.xml
+++ b/app/src/main/res/layout/sent_message.xml
@@ -7,31 +7,39 @@
 
     <TextView
         android:id="@+id/message"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
-        android:text="Message goes here"
-        android:textColor="@color/design_default_color_error"
-        android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/sendImg"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="35dp"
+        android:text="message"
+        android:textColor="#FF9800"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.173"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:text="Time goes here"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/sendImg"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:text="time"
+        android:textColor="#070707"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toBottomOf="@+id/message" />
 
     <ImageView
-        android:id="@+id/sendImg"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/imageView3"
+        android:layout_width="55dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        android:src="@drawable/app_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sender1" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
