--- a/app/src/main/res/layout/room_chat.xml
+++ b/app/src/main/res/layout/room_chat.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ChatRoom">
+    tools:context=".ChatRoom">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/sendButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.99"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,20 +22,23 @@
         android:layout_marginEnd="11dp"
         android:layout_marginBottom="32dp"
         android:text="Send"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/inputText"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/inputText"
-        style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
-        android:layout_width="216dp"
+        android:layout_width="0dp"
         android:layout_height="65dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="11dp"
         android:layout_marginBottom="32dp"
         android:ems="10"
-        android:hint="enter message"
+        android:hint="Enter message"
         android:inputType="text"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/receiveButton"
         app:layout_constraintStart_toEndOf="@+id/sendButton" />
 
     <Button
@@ -44,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Receive"
+        android:textColor="#000000"
         app:layout_constraintBaseline_toBaselineOf="@+id/inputText"
-        app:layout_constraintStart_toEndOf="@+id/inputText" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
