--- a/app/src/main/res/layout-sw600dp/activity_chat_room.xml
+++ b/app/src/main/res/layout-sw600dp/activity_chat_room.xml
@@ -4,37 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ChatRoom">
+    tools:context=".ChatRoom">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="0dp"
+        android:id="@+id/recycleView"
+        android:layout_width="300dp"
         android:layout_height="0dp"
+        android:background="#D8D0E6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintHorizontal_bias="0.006"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+         />
 
     <Button
         android:id="@+id/sendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="32dp"
         android:text="Send"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
-        app:layout_constraintEnd_toStartOf="@+id/inputText"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/recycleView"
+        app:layout_constraintEnd_toStartOf="@+id/textInput"
+        />
 
     <EditText
-        android:id="@+id/inputText"
+        android:id="@+id/textInput"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
-        android:layout_width="216dp"
-        android:layout_height="65dp"
-        android:layout_marginBottom="32dp"
-        android:ems="10"
-        android:hint="enter message"
+        android:layout_marginBottom="10dp"
+        android:ems="14"
+        android:hint="enter text"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sendButton" />
@@ -44,7 +46,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Receive"
-        app:layout_constraintBaseline_toBaselineOf="@+id/inputText"
-        app:layout_constraintStart_toEndOf="@+id/inputText" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textInput"
+        app:layout_constraintStart_toEndOf="@+id/textInput" />
+
+    <FrameLayout
+        android:id="@+id/fragmentLocation"
+        android:layout_width="649dp"
+        android:layout_height="1701dp"
+        android:background="@color/my_primary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
