--- a/app/src/main/res/layout/sent_message.xml
+++ b/app/src/main/res/layout/sent_message.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:text="Message goes here"
-        android:textColor="@color/design_default_color_error"
+        android:textColor="@color/my_secondary"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/sendImg"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
         android:text="Time goes here"
+        android:textColor="@color/my_secondary"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/sendImg"
         app:layout_constraintTop_toBottomOf="@+id/message" />
@@ -33,5 +34,5 @@
         android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sender" />
+        app:srcCompat="@drawable/app_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
