--- a/app/src/main/res/layout/receive_message.xml
+++ b/app/src/main/res/layout/receive_message.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:text="Message goes here"
-        android:textColor="@color/design_default_color_primary_dark"
+        android:textColor="@color/my_secondary"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,7 @@
         android:layout_height="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/receiver" />
+        app:srcCompat="@drawable/app_icon" />
 
     <TextView
         android:id="@+id/time"
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="64dp"
         android:text="Time goes here"
+        android:textColor="@color/my_secondary"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/message" />
 </androidx.constraintlayout.widget.ConstraintLayout>
